 -- Update nvml plugin to match the unique id format for MIG devices in new
    Nvidia drivers.
 -- Fix segfault on backup slurmdbd if no QoS is present in DB.
 -- Fix clang 11 compile errors.
 -- Fix task distribution calculations across sockets with
    --distribution=cyclic.
 -- Fix task distribution calculations with --ntasks-per-gpu specified without
    an explicit --ntasks value.

* Changes in Slurm 22.05.4
==========================
 -- Fix return code from salloc when the job is revoked prior to executing user
    command.
 -- Fix minor memory leak when dealing with gres with multiple files.
 -- Fix printing for no_consume gres in scontrol show job.
 -- sinfo - Fix truncation of very large values when outputting memory.
 -- Fix multi-node step launch failure when nodes in the controller aren't in
    natural order. This can happen with inconsistent node naming (such as
    node15 and node052) or with dynamic nodes which can register in any order.
 -- job_container/tmpfs - Prevent reading the plugin config multiple times per
    step.
 -- Fix wrong attempt of gres binding for gres w/out cores defined.
 -- Fix build to work with '--without-shared-libslurm' configure flag.
 -- Fix power_save mode when repeatedly configuring too fast.
 -- Fix sacct -I option.
 -- Prevent jobs from being scheduled on future nodes.
 -- Fix memory leak in slurmd happening on reconfigure when CPUSpecList used.
 -- Fix sacctmgr show event [min|max]cpus.
 -- Fix regression in 22.05.0rc1 where a prolog or epilog that redirected stdout
    to a file could get erroneously killed, resulting in job launch failure
    (for the prolog) and the node being drained.
 -- cgroup/v1 - Make a static variable to remove potential redundant checking
    for if the system has swap or not.
 -- cgroup/v1 - Add check for swap when running OOM check after task
    termination.
 -- job_submit/lua - add --prefer support
 -- cgroup/v1 - fix issue where sibling steps could incorrectly be accounted as